[project]
authors = [
    {name = "Qinyu Luo", email = "qinyuluo123@gmail.com"},
]
maintainers = [
    {name = "Edwards Arno", email = "Edwards.Arno@outlook.com"},
]
license = {text = "Apache-2.0"}
requires-python = ">=3.10,<4.0"
dependencies = [
    "loguru>=0.7.2",
    "openai>=1.10.0",
    "gradio>=4.16.0",
    "markdown>=3.5.2",
    "pyyaml>=6.0.1",
    "jedi>=0.19.1",
    "GitPython>=3.1.41",
    "chromadb>=0.4.22",
    "prettytable>=3.9.0",
    "python-iso639>=2024.2.7",
    "pydantic-settings>=2.2.1",
    "tomli>=2.0.1",
    "tomli-w>=1.0.0",
    "llama-index<0.10.0",
    "colorama>=0.4.6",
]
name = "repoagent"
version = "0.1.3"
description = "An LLM-Powered Framework for Repository-level Code Documentation Generation."
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

[project.urls]
repository = "https://github.com/LOGIC-10/RepoAgent"

[project.scripts]
repoagent = "repo_agent.main:cli"

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "ruff>=0.1.14",
]
test = [
    "pytest<8.0.0,>=7.4.4",
    "pytest-mock<4.0.0,>=3.12.0",
]

[tool.pdm.build]
includes = [
    "repo_agent",
]


[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pyright]
reportCallIssue="none"