[project]
authors = [
    {name = "Qinyu Luo", email = "qinyuluo123@gmail.com"},
]
maintainers = [
    {name = "Edwards Arno", email = "Edwards.Arno@outlook.com"},
]
license = {text = "Apache-2.0"}
requires-python = ">=3.11,<4.0"
dependencies = [
    "loguru>=0.7.2",
    "markdown>=3.5.2",
    "jedi>=0.19.1",
    "GitPython>=3.1.41",
    "prettytable>=3.9.0",
    "pydantic-settings>=2.2.1",
    "colorama>=0.4.6",
    "click>=8.1.7",
    "python-iso639>=2024.10.22",
    "llama-index-llms-openai>=0.2.16",
    "llama-index-llms-openai-like>=0.2.0",
]
name = "repoagent"
version = "0.1.4"
description = "An LLM-Powered Framework for Repository-level Code Documentation Generation."
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

[project.urls]
repository = "https://github.com/LOGIC-10/RepoAgent"

[project.scripts]
repoagent = "repo_agent.main:cli"

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "ruff>=0.1.14",
]
test = [
    "pytest<8.0.0,>=7.4.4",
    "pytest-mock<4.0.0,>=3.12.0",
]

[tool.pdm.build]
includes = [
    "repo_agent",
]


[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pyright]
reportCallIssue="none"

[tool.ruff]
# General ruff settings can stay here.

[tool.ruff.lint]
select = ["I001"] 